--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,12 @@ services:
 
   kafka:
     depends_on:
+      - "stedi"
     image: confluentinc/cp-kafka:5.5.1
     container_name: kafka
     restart: unless-stopped
     expose:
+      - "19092"
     environment:
 
   redis:
