--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,9 @@ version: '3.7'
 services:
   zookeeper:
    image: confluentinc/cp-zookeeper:5.2.2
+   ports:
 
+   - "2181:2181"
   kafka:
 
   redis:
