--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,14 @@ services:
   redis:
 
   stedi:
-    image: imageName
-    ports:
+    image: scmurdock/stedi
+    ports: 
+    - "4567:4567"  
     enviroment:
+      REDIS_HOST: "redis"
+      REDIS_PORT: "6379"
+      REDIS_DB: 0
+      KAFKA_BROKER: "kafka:19092"
+      KAFKA_RISK_TOPIC: "customer-risk-topic"
     depends_on:
     - "redis"
