--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,12 @@ version: '3.7'
 services:
   zookeeper:
    image: confluentinc/cp-zookeeper:5.2.2
+   container_name: "zookeeper"
    ports:
-
    - "2181:2181"
    environment:
-
     ZOOKEEPER_CLIENT_PORT: "2181"
+    restart: unless-stopped
   kafka:
 
   redis:
