--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,24 @@ services:
       - "stedi"
     image: confluentinc/cp-kafka:5.5.1
     container_name: kafka
-    restart: unless-stopped
     expose:
       - "19092"
     environment:
+      - KAFKA_BROKER_ID: "0"
+      - KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2180"
+      - KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:19092"
+      - KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT"
+      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
+    restart: unless-stopped
 
   redis:
 
-  stedi:
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
