--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,12 +17,12 @@ services:
     expose:
       - "19092"
     environment:
-      - KAFKA_BROKER_ID: "0"
-      - KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2180"
-      - KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:19092"
-      - KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
-      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT"
-      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
+      KAFKA_BROKER_ID: "0"
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2180"
+      KAFKA_ADVERTISED_LISTENERS: "INTERNAL://kafka:19092"
+      KAFKA_INTER_BROKER_LISTENER_NAME: "INTERNAL"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: "INTERNAL:PLAINTEXT"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
     restart: unless-stopped
 
   redis:
