--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,8 @@ services:
   zookeeper:
    image: confluentinc/cp-zookeeper:5.2.2
    container_name: "zookeeper"
-   ports:
-    -"2181:2181"
+   expose:
+    - "2181"
    restart: unless-stopped
    environment:
     ZOOKEEPER_CLIENT_PORT: "2181"
