--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
   redis:
     image: redis:6.0.6
     container_name: "redis"
-    restart: unless_stopped
+    restart: unless-stopped
     expose:
       - "6379"  #hope this works well
 
